# opengl-boiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: shader.glsl
src/: Camera.h  Maths.h  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextureLoader.h  WindowManager.h  main.cpp
